// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NiListItem has the expected html structure 1`] = `<!---->`;

exports[`NiListItem should append the fa-spin class 1`] = `
<div
  class="ni-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <i
        class="material-icons fa-spin"
      >
        rotate_right
      </i>
    </div>
    <div
      class="ni-li-label"
    >
      <div
        class="ni-li-title"
      >
        Connecting...
      </div>
      <div
        class="ni-li-subtitle"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show a dd link 1`] = `
<a
  class="ni-li ni-li-link v-enter v-enter-active"
  href="/location"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-dl"
    >
      <div
        class="ni-li-dt"
      >
        Link
      </div>
      <div
        class="ni-li-dd"
      >
        
      </div>
    </div>
    <div
      class="ni-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</a>
`;

exports[`NiListItem should show a description 1`] = `
<a
  class="ni-li ni-li-link v-enter v-enter-active"
  href="/location"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-dl"
    >
      <div
        class="ni-li-dt"
      >
        Link
      </div>
      <div
        class="ni-li-dd"
      >
        
      </div>
    </div>
    <div
      class="ni-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</a>
`;

exports[`NiListItem should show a label 1`] = `
<div
  class="ni-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-label"
    >
      <div
        class="ni-li-title"
      >
        Title
      </div>
      <div
        class="ni-li-subtitle"
      >
        Subtitle
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show a router-link 1`] = `
<router-link
  class="ni-li ni-li-link v-enter v-enter-active"
  name="proposal"
  to="/location"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-dl"
    >
      <div
        class="ni-li-dt"
      >
        Link
      </div>
      <div
        class="ni-li-dd"
      >
        
      </div>
    </div>
    <div
      class="ni-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</router-link>
`;

exports[`NiListItem should show a subtitle router link 1`] = `
<router-link
  class="ni-li ni-li-link v-enter v-enter-active"
  name="proposal"
  to="/location"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-label"
    >
      <div
        class="ni-li-title"
      >
        
      </div>
      <div
        class="ni-li-subtitle"
      >
        
      </div>
    </div>
    <div
      class="ni-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</router-link>
`;

exports[`NiListItem should show a thumb 1`] = `
<a
  class="ni-li ni-li-link v-enter v-enter-active"
  href="/location"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-dl"
    >
      <div
        class="ni-li-dt"
      >
        Link
      </div>
      <div
        class="ni-li-dd"
      >
        
      </div>
    </div>
    <div
      class="ni-li-icon"
    >
      <i
        class="material-icons inactive"
      >
        chevron_right
      </i>
      <i
        class="material-icons active"
      >
        my_location
      </i>
    </div>
  </div>
</a>
`;

exports[`NiListItem should show as dd text 1`] = `
<div
  class="ni-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-dl"
    >
      <div
        class="ni-li-dt"
      >
        Link
      </div>
      <div
        class="ni-li-dd"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show as text 1`] = `
<div
  class="ni-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-label"
    >
      <div
        class="ni-li-title"
      >
        Link
      </div>
      <div
        class="ni-li-subtitle"
      >
        
      </div>
    </div>
  </div>
</div>
`;

exports[`NiListItem should show as text link 1`] = `
<div
  class="ni-li v-enter v-enter-active"
  name="proposal"
>
  <div
    class="ni-li-container"
  >
    <div
      class="ni-li-thumb"
    >
      <!---->
    </div>
    <div
      class="ni-li-dl"
    >
      <div
        class="ni-li-dt"
      >
        Link
      </div>
      <div
        class="ni-li-dd"
      >
        
      </div>
    </div>
  </div>
</div>
`;
